<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wel_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingBottom="120dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/username" />

            <com.zzu.zk.zhiwen.customed_ui.ClearableEditText
                android:id="@+id/un"
                android:maxLength="40"
                android:layout_width="0dp"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/pwd" />

            <com.zzu.zk.zhiwen.customed_ui.ClearableEditText
                android:singleLine="true"
                android:maxLength="40"
                android:id="@+id/pwd"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/go_reg"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_height="match_parent"
                android:textColor="@drawable/go_reg_sele"
                android:layout_weight="1"
                android:text="@string/go_reg" />

            <CheckBox

                android:id="@+id/remeber_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:checked="false"
                android:drawablePadding="5dp"
                android:text="@string/remeber_pwd" />


            <TextView
                android:id="@+id/forget_pwd"
                android:gravity="right"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@drawable/go_reg_sele"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/forget_pwd" />


        </LinearLayout>


        <Button
            android:id="@+id/login"
            android:layout_marginTop="40dp"
            android:layout_width="200dp"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:textColor="@drawable/login_btn_con_bg"
            android:textSize="18sp"

            android:layout_height="40dp" />



    </LinearLayout>


</RelativeLayout>