<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="100dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <com.zzu.zk.zhiwen.customed_ui.MyCircleView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:imgSrc="@mipmap/image_weibo_home_2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/username" />

                <TextView
                    android:id="@+id/dis_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="参与讨论：" />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num_of_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="问题数：200" />

                <TextView
                    android:id="@+id/num_of_fans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="粉丝数：200" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />

                <View
                    android:id="@+id/head_detail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/forward" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/me_bg"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/my_ask"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_marginLeft="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/pro"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/me_pro"
                android:gravity="left|center_vertical"
                android:paddingLeft="7dp" />


            <View
                android:id="@+id/me_pro_detail"
                android:layout_marginRight="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/forward"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/my_collect"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:background="@drawable/star"
                android:layout_marginLeft="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/me_collect"
                android:gravity="left|center_vertical"
                android:paddingLeft="7dp" />


            <View
                android:id="@+id/me_collect_detail"
                android:background="@drawable/forward"
                android:layout_marginRight="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_attention"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:background="@drawable/heart"
                android:layout_marginLeft="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />


            <TextView
                android:text="@string/me_attention"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:paddingLeft="7dp" />


            <View
                android:id="@+id/me_attention_detail"
                android:background="@drawable/forward"
                android:layout_marginRight="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_bargen"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:background="@drawable/ic_bargen"
                android:layout_marginLeft="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>


            <TextView
                android:text="@string/me_bargen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:paddingLeft="7dp" />


            <View
                android:id="@+id/me_bargen_detail"
                android:background="@drawable/forward"
                android:layout_marginRight="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_settings"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:background="@drawable/settings"
                android:layout_marginLeft="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />


            <TextView
                android:text="@string/me_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:paddingLeft="7dp" />


            <View
                android:id="@+id/me_setting_detail"
                android:background="@drawable/forward"
                android:layout_marginRight="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <!--<View-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:background="@color/white"/>-->


    </LinearLayout>


</LinearLayout>